@@ -1,2 +1,2 @@
 The data files in this directory were obtained from the public-domain tz database,
-http://www.twinsun.com/tz/tz-link.htm, version 2012h.
+http://www.twinsun.com/tz/tz-link.htm, version 2012i.
