@@ -1204,7 +1204,7 @@ Rule	Zion	2012	only	-	Sep	23	2:00	0	S
 # past, approved sending the proposed June 2011 changes to the Time
 # Decree Law back to the Knesset for second and third (final) votes
 # before the upcoming elections on Jan. 22, 2013.  Hence, although the
-# changes are not yet law, they are expected to be so before Februray 2013.
+# changes are not yet law, they are expected to be so before February 2013.
 #
 # As of 2013, DST starts at 02:00 on the Friday before the last Sunday in March.
 # DST ends at 02:00 on the first Sunday after October 1, unless it occurs on the
