@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2012i) - ???????????
+
+* Updated to tzdata version 2012i
+  (http://mm.icann.org/pipermail/tz-announce/2012-November/000007.html).
+
+
 == Version 0.3.34 (tzdata v2012h) - 27-Oct-2012
 
 * Updated to tzdata version 2012h
